--- a/microservice-service-dev.yml
+++ b/microservice-service-dev.yml
@@ -1,2 +1,13 @@
 server:
   port: 8089
+spring:
+  datasource:
+    url: jdbc:h2:file:/data/refactorizando/h2
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+  jpa: 
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
