--- a/microservice-service-dev.yml
+++ b/microservice-service-dev.yml
@@ -2,8 +2,8 @@ server:
   port: 8089
 spring:
   datasource:
-    #url: jdbc:h2:file:/data/refactorizando/h2
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:file:/data/refactorizando/h2
+    #url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: password
