--- a/microservice-service-dev.yml
+++ b/microservice-service-dev.yml
@@ -9,6 +9,12 @@ spring:
     password: password
   jpa: 
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true 
   h2:
     console:
       enabled: true
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
