--- a/microservice-service-dev.yml
+++ b/microservice-service-dev.yml
@@ -9,7 +9,9 @@ spring:
     password: password
   jpa: 
     database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: true 
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
   h2:
     console:
       enabled: true
